Fix overflow on Explorer and Editor

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -5,20 +5,16 @@
 }
 
 .Navbar {
-  grid-area: navbar;
 }
 
 .Editor {
-  grid-area: editor;
   overflow: auto;
 }
 
 .Header {
-  grid-area: header;
 }
 
 .Explorer {
-  grid-area: explorer;
 }
 
 .title {
